--- a/.github/workflows/ios-deploy.yml
+++ b/.github/workflows/ios-deploy.yml
@@ -1,39 +1,52 @@
-name: iOS Build & Deploy
+name: iOS Build and Deploy
 
 on:
   push:
     branches:
-      - main
+      - master
+  pull_request:
 
 jobs:
   build:
     runs-on: macos-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      # Step 1: Checkout repo
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up Ruby (for Fastlane)
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: '3.1'
+      # Step 2: Setup Xcode
+      - name: Set up Xcode
+        run: sudo xcode-select -s /Applications/Xcode.app
 
+      # Step 3: Install dependencies (agar CocoaPods use kar rahe ho)
       - name: Install dependencies
         run: |
-          gem install bundler:2.3.26
-          gem install fastlane
+          cd MyFirstiOSApp
+          pod install --repo-update || true
 
-      - name: Build and upload to TestFlight
+      # Step 4: Build iOS app
+      - name: Build app
         run: |
-          fastlane pilot upload \
-            --username "$APPLE_ID" \
-            --app_identifier "$APP_IDENTIFIER" \
-            --team_id "$TEAM_ID" \
-            --apple_id "$APPLE_ID" \
-            --ipa ./build/MyFirstiOSApp.ipa
-        env:
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
-          TEAM_ID: ${{ secrets.TEAM_ID }}
-          FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
+          xcodebuild \
+            -workspace MyFirstiOSApp.xcworkspace \
+            -scheme MyFirstiOSApp \
+            -sdk iphoneos \
+            -configuration Release \
+            -archivePath build/MyFirstiOSApp.xcarchive archive
+
+      # Step 5: Export IPA
+      - name: Export IPA
+        run: |
+          xcodebuild -exportArchive \
+            -archivePath build/MyFirstiOSApp.xcarchive \
+            -exportOptionsPlist MyFirstiOSApp/Info.plist \
+            -exportPath build
+
+      # ✅ Step 6: Upload IPA with latest v4
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ios-app
+          path: build/*.ipa
 
